set up the login reg page to match wireframe

--- a/apps/loginreg/templates/loginreg/index.html
+++ b/apps/loginreg/templates/loginreg/index.html
@@ -20,10 +20,8 @@
       {% csrf_token %}
       <label for= "name"> Name </label>
       <input type="text" name="name" value="">
-      <label for= "alias"> Alias </label>
-      <input type="text" name="alias" value="">
-      <label for= "email"> Email </label>
-      <input type="text" name="email" value="">
+      <label for= "username"> Username </label>
+      <input type="text" name="username" value="">
       <label for= "password"> Password </label>
       <input type="password" name = "password">
       <label for= "confirm_password"> Confirm Password </label>
@@ -32,14 +30,11 @@
     </form>
   </div>
   <div id='returning_user'>
-      {% for message in messages %}
-        <p>{{message.login}}</p>
-      {% endfor %}
     <form action="{% url 'loginreg:login' %}" method = "POST">
       {% csrf_token %}
-      <label for= "email"> Email </label>
-      <input type="text" name="email" value="">
-      <label for= "password"> Password </label>
+      <label for= "username"> Username: </label>
+      <input type="text" name="username" value="">
+      <label for= "password"> Password: </label>
       <input type="password" name = "password">
       <input type="submit" value="Login">
     </form>
