have a mostly working project. I am starting to run out of time so I need to get it deployed

--- a/apps/pythonbeltapp/static/pythonbeltapp/css/style.css
+++ b/apps/pythonbeltapp/static/pythonbeltapp/css/style.css
@@ -1,3 +1,12 @@
 h1{
   color: red;
 }
+#destination p{
+  margin-left: 15px;
+}
+#top{
+  margin-left: 500px;
+}
+#add_trip{
+  margin-left: 15px;
+}
