complete working assignment from my laptop

--- a/apps/pythonbeltapp/templates/pythonbeltapp/destination.html
+++ b/apps/pythonbeltapp/templates/pythonbeltapp/destination.html
@@ -16,7 +16,7 @@
   </div>
 <div id="destination">
   <h3>{{trip.destination}}</h3>
-    <p>Planned By: {{trip.user.name}}</p>
+    <p>Planned By: {{trip.creator.name}}</p>
     <p>Description: {{trip.description}}</p>
     <p>Travel Date From: {{trip.trip_begin}}</p>
     <p>Travel Date To: {{trip.trip_end}}</p>
